--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,43 @@ body {
   display: flex;
   flex-direction: column;
 }
-
 .logo-container {
   flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.nav {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
+}
+
+#info {
+  height: 40px;
+  width: 40px;
+  background: #fe6c00;
+  box-shadow: none;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.close {
+  height: 40px;
+  width: 40px;
+  background: #fe6c00;
+  box-shadow: none;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
@@ -44,7 +74,7 @@ body {
 }
 .title span:nth-child(3) {
   font-size: 20px;
-  font-weight: 200;
+  font-weight: 600;
 }
 
 .data-container {
@@ -193,6 +223,34 @@ h3 {
   font-weight: bold;
 }
 
+.info-popup {
+  flex: 2;
+  border: 2px solid red;
+  background: #000;
+  border-radius: 20px;
+  margin: 0px 20px 100px 20px;
+}
+
+.info-bar {
+  justify-content: space-between;
+  margin: 0px 20px;
+}
+
+.information-1,
+.information-2,
+.information-3,
+.about {
+  border: 1px solid #fe6c00;
+  margin: 20px;
+  border-radius: 20px;
+  color: #fe6c00;
+  flex-direction: column;
+}
+
+.about p {
+  text-align: center;
+}
+
 @media screen and (max-width: 1000px) {
   .main-container {
     height: 100vh;
@@ -278,4 +336,28 @@ h3 {
   border-radius: 20px;
   margin-top: 20px;
   font-size: 20px;
+}
+
+button:hover {
+  color: #fe6c00;
+  background: #3f3636;
+}
+
+#info:hover {
+  color: #fe6c00;
+  background: #3f3636;
+}
+
+button:active {
+  background: #fff;
+  box-shadow: none;
+}
+
+#info:active {
+  background: #fff;
+  box-shadow: none;
+}
+
+button {
+  box-shadow: 5px 5px 5px #000;
 }
